--- a/M2024.ipynb
+++ b/M2024.ipynb
@@ -167,7 +167,7 @@
     "To save time, please focus on the return series from the US and three other countries that you find interesting. \n",
     "\n",
     "* Use the print+format command to print out <font color=\"red\">four sentences</font>, each reporting the mean, standard deviation (SD), minimum (min), and maximum (max) for each of the four return series, respectively. [4 pts]\n",
-    "    - Please present all numbers in daily percents. Please keep two digits after the decimal point. \n",
+    "    - Please present all numbers in daily percents. Please keep three digits after the decimal point. \n",
     "* Use the print+format command to display the correlations between the US and the three chosen return series in <font color=\"red\">three separate sentences</font>, respectively. [3 pts]  \n",
     "    - Please keep two digits after the decimal point.\n",
     "* Use the print+format command to display the correlation between the US stock market returns and the NBER recession indicator in <font color=\"red\">one separate sentence</font>. [1 pt]\n",
